--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -461,3 +461,13 @@ table
 			display: none
 
 /*view print end*/
+
+/* user spacer
+.user-spacer
+	width: 100%
+	height: 1px
+	+font(0, 0)
+	margin-bottom: $bottom-space
+	clear: both
+
+/* user spacer end
