--- a/src/sass/base/_reset.sass
+++ b/src/sass/base/_reset.sass
@@ -19,9 +19,12 @@ form
 	padding: 0
 input
 	vertical-align: middle
-textarea, select, input[type="text"], input[type="email"], input[type="search"], input[type="submit"], input[type="button"], input[type="reset"], button
+textarea, .select select, input[type="text"], input[type="email"], input[type="search"], input[type="submit"], input[type="button"], input[type="reset"], button
 	-webkit-appearance: none
+	-moz-appearance: none
 	border-radius: 0
+select::-ms-expand
+	display: none
 input[type=radio], input[type=checkbox], select
 	cursor: pointer
 textarea, input, button
