--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -56,8 +56,8 @@ $bottom-space--ml: round-float($font-size*$line-height*1.5, 1) !default
 $bottom-space--sm: round-float($font-size*$line-height*0.75, 1) !default
 
 // цвет бренда
-$base-color: tomato !default
-$base-color-alt: lightgreen !default
+$base-color: #ffa43f !default
+$base-color-alt: lightskyblue !default
 // главные контрастные цвета (обычно, белый и черный)
 $text-color-base: black !default
 $bg-color-base: white !default
@@ -110,12 +110,12 @@ $form-bg-color: white !default
 $form-border-color: lightgray !default
 $form-border-focus-color: darken($form-border-color, 20%) !default
 $form-error-color: red !default
-$form-success-color: green !default
+$form-success-color: lightseagreen !default
 $form-bottom-space: 3rem !default
 $form-bottom-space--sm: 1.5em !default
 $form-gap: 40px !default
 // ==================
-$checkbox-color: tomato
+$checkbox-color: blue
 // ==================
 $form-font-size: 16px !default
 $form-line-height: 24px !default
