--- a/src/sass/components/_bitrix-search.sass
+++ b/src/sass/components/_bitrix-search.sass
@@ -2,7 +2,7 @@
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
 
-/*bitrix default search page*/
+/* bitrix default search page
 .search-page
 	font-size: round-float($font-size*0.85, 1)
 	margin-bottom: $bottom-space--lg
@@ -83,7 +83,7 @@
 		a
 			display: inline-block
 			vertical-align: top
-			color: $text-color-alt
+			color: $base-color
 			text-decoration: none
 			cursor: pointer
 
@@ -103,7 +103,7 @@
 
 			span
 				color: white !important
-				background-color: $text-color-alt !important
+				background-color: $base-color !important
 
 		.no-touchevents & a:hover span
 			background-color: lightgray
@@ -114,4 +114,4 @@
 	small
 		color: $text-color-light
 
-/*bitrix default search page end*/
+/* bitrix default search page end
