--- a/src/sass/components/_breadcrumbs.sass
+++ b/src/sass/components/_breadcrumbs.sass
@@ -2,7 +2,7 @@
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
 
-/*breadcrumbs*/
+/* breadcrumbs
 .breadcrumbs
 	color: $text-color-light
 	margin-bottom: $bottom-space
@@ -66,4 +66,4 @@
 			border-color: tint($link-color, 30%)
 			color: $link-color
 
-/*breadcrumbs end*/
+/* breadcrumbs end
