--- a/src/sass/components/_user-form.sass
+++ b/src/sass/components/_user-form.sass
@@ -2,7 +2,7 @@
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
 
-/*user form*/
+/* user form
 .form-title
 	display: block
 	+font-alt-bold
@@ -102,4 +102,4 @@
 		+font($font-size--sm, $line-height--sm)
 		letter-spacing: normal
 
-/*user form end*/
+/* user form end
