--- a/src/sass/partials/_header.sass
+++ b/src/sass/partials/_header.sass
@@ -2,12 +2,12 @@
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
 
-/*HEADER*/
+/* HEADER
 .header__holder
 	padding: 10px 0
 	+clear
 
-/*logo*/
+/* logo
 .logo
 	position: relative
 	float: left
@@ -23,5 +23,5 @@
 		display: block
 		height: 100%
 
-/*logo end*/
-/*HEADER end*/
+/* logo end
+/* HEADER end
