--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -6,13 +6,13 @@
 $breakpoints: ('desk-hd': 1920px, 'desk-lg': 1600px, 'desk-md': 1366px, 'desk-sm': 1200px, 'tab-lg': 992px, 'tab-sm': 768px, 'mob-lg': 640px, 'mob-md': 480px, 'mob-sm': 320px)
 
 // base
-$font-size: 1.8rem !default
-$line-height: round-float(3.2rem/$font-size, 2) !default
+$font-size: 1.6rem !default
+$line-height: round-float(2.4rem/$font-size, 2) !default
 // ===============
-$font-size--sm: 1.6rem !default
+$font-size--sm: 1.4rem !default
 $line-height--sm: round-float(2.4rem/$font-size--sm, 2) !default
 // ===============
-$font-size--less: 1.4rem !default
+$font-size--less: 1.2rem !default
 $line-height--less: round-float(2.0rem/$font-size--less, 2) !default
 
 // =======h1========
@@ -24,6 +24,7 @@ $line-height-h1--md: round-float(4.8rem/$font-size-h1--md, 2) !default
 // sm ===
 $font-size-h1--sm: 3.0rem !default
 $line-height-h1--sm: round-float(4.2rem/$font-size-h1--sm, 2) !default
+
 // =======h2========
 $font-size-h2: round-float($font-size-h1*3.6rem/4.8rem, 1) !default
 $line-height-h2: round-float(4.8rem/3.6rem, 2) !default
@@ -33,18 +34,22 @@ $line-height-h2--md: round-float(($line-height-h1--md*1.02),2) !default
 // sm ===
 $font-size-h2--sm: round-float($font-size-h1--sm*0.87, 1) !default
 $line-height-h2--sm: round-float(($line-height-h1--sm*1.01),2) !default
+
 // =======h3========
 $font-size-h3: round-float($font-size-h1*2.4rem/4.8rem, 1) !default
 $line-height-h3: round-float(3.6rem/2.4rem, 2) !default
 // sm ===
 $font-size-h3--sm: round-float($font-size-h1--sm*0.73, 1) !default
 $line-height-h3--sm: round-float(($line-height-h1--sm*1.05),2) !default
+
 // =======h4========
 $font-size-h4: round-float($font-size-h1*1.8rem/4.8rem, 1) !default
 $line-height-h4: round-float(3.0rem/1.8rem, 2) !default
+
 // =======h5========
 $font-size-h5: $font-size !default
 $line-height-h5: $line-height !default
+
 // =======h6========
 $font-size-h6: round-float($font-size*0.75, 1) !default
 $line-height-h6: round-float($line-height*1.25, 2) !default
@@ -55,6 +60,7 @@ $bottom-space--md: round-float($font-size*$line-height*2.0, 1) !default
 $bottom-space--ml: round-float($font-size*$line-height*1.5, 1) !default
 $bottom-space--sm: round-float($font-size*$line-height*0.75, 1) !default
 
+// =======Цветовая схема========
 // цвет бренда
 $base-color: #ffa43f !default
 $base-color-alt: lightskyblue !default
@@ -67,25 +73,24 @@ $bg-color: #e5e5e5 !default
 $bg-color-alt: #f3f3f3 !default
 // цвет основного текста
 $text-color: #262626 !default
-// цвет основных заголовков заголовков
+// цвет основных заголовков
 $title-color: black !default
 // цвет текста светлее основного
 $text-color-light: gray !default
-// цвет для выделения текста
-$text-color-alt: tomato !default
 // цвет ссылки
 $link-color: blue !default
 // цвет линий и границ
 $border-color: lightgray !default
 // цвет специальных элементов
-$mark-color: coral !default
+$mark-color: tomato !default
 
+// =======Класс текстовой страницы========
 // user content class
 // class на контейнере, в котором будет использоваться стилизация
 // типографических элементов: списков, таблиц, цытат и т.д.
 $user-content: user-content !default
 
-// layout
+// =======Layout========
 // отступы слева и справа для всего сайта
 $page-layout-space-horizontal: 20px !default
 // максимальная ширина сайта
@@ -103,7 +108,7 @@ $grid-space: 30px !default
 $grid-space--lg: 20px !default
 $grid-space--sm: 10px !default
 
-// form
+// =======Form========
 $form-text-color: $text-color !default
 $form-placeholder-color: lightgray !default
 $form-bg-color: white !default
@@ -114,44 +119,37 @@ $form-success-color: lightseagreen !default
 $form-bottom-space: 3rem !default
 $form-bottom-space--sm: 1.5em !default
 $form-gap: 40px !default
-// ==================
+// ========checkbox&radio==========
 $checkbox-color: blue
-// ==================
+// =========form font=========
 $form-font-size: 16px !default
 $form-line-height: 24px !default
 $form-input-height: 50px !default
 $form-letter-spacing: null !default
-// ==================
+// =========form layout=========
 $form-border-width: 2px !default
 $form-input-space-vt: floor(($form-input-height - $form-line-height - $form-border-width*2)/2) !default // верхний паддинг округляем в нижнюю сторону
 $form-input-space-vb: ceil(($form-input-height - $form-line-height - $form-border-width*2)/2) !default // нижний паддинг округляем в верхнюю сторону
 $form-input-space-h: 18px !default
-// ==================
+// =========select=========
 $select-space-v: 12px !default
 $select-space-h: $form-input-space-h !default
 $select-arrow-width: 40px !default
 $select-arrow-height: 100% !default
-// ==================
 $multiple-item-space: 3px
 
-// btn
-$btn-bg-color: tomato !default
+// =========Buttons=========
+$btn-bg-color: $base-color !default
 $btn-bg-hover-color: darken($btn-bg-color, 20%) !default
 $btn-text-color: white !default
+$btn-disabled-color: #ccc !default
 
-// table color
-$table-text-color: $text-color !default
-$table-border-color: tomato !default
-$table-bg-color: white !default
-$table-text-alt-color: white !default
-$table-bg-alt-color: tomato !default
-
-// animation
+// =========Animation=========
 $animation-use: false !default
 $animation-speed: 0.2s !default
 $animation-speed-mouseleave: 0.35s !default
 
-// fonts style
+// =========fonts style=========
 $font-norm: 'Roboto', sans-serif !default
 $font-alt: 'Roboto Slab', serif !default
 
