--- a/src/sass/base/_layout.sass
+++ b/src/sass/base/_layout.sass
@@ -2,6 +2,11 @@
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
 
+body
+	height: 100%
+	min-width: 320px
+	position: relative
+
 .wrapper
 	margin: 0 auto
 	//min-height: 100%
