--- a/src/sass/components/_files.sass
+++ b/src/sass/components/_files.sass
@@ -2,23 +2,32 @@
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
 
-/*files links*/
+/* files links
 .file
-	$file-icon-size: 32px
-	display: inline-block
-	vertical-align: top
+	$file-icon-size: 42px
+	+display-inline-block-top
+	min-height: $file-icon-size
 	padding: 0.5em
-	+font(1.6rem, 1.4)
+	+font(16px, 20px)
+	color: $text-color
 	text-decoration: none
-	+clear
 
-	.no-touchevents &:hover
-		box-shadow: inset 0 0 0 1px $border-color
+	@if $animation-use
+		transition:
+			property: background-color
+			duration: $animation-speed
+
+	+clear
 
 	svg
 		float: left
-		+margin($top: 0.3em, $bottom: -0.3em)
 		+size($file-icon-size)
+
+	@if $animation-use
+		path
+			transition:
+				property: fill
+				duration: $animation-speed
 
 	.st-bg
 		fill: #e2e5e7
@@ -37,9 +46,20 @@
 		margin-left: #{$file-icon-size}
 		padding-left: 1em
 
+		@if $animation-use
+			transition:
+				property: color
+				duration: $animation-speed
+
 	& > em
 		display: block
 		font-size: 1.4rem
 		color: $text-color-light
 
-/*files links end*/
+	.no-touchevents &:hover
+		background-color: $base-color
+
+		& > em
+			color: $bg-color-base
+
+/* files links end
