--- a/src/sass/components/_sliders.sass
+++ b/src/sass/components/_sliders.sass
@@ -2,7 +2,7 @@
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
 
-/*slick sliders*/
+/* slick sliders
 // arrows
 .slick-arrow
 	+size(40px)
@@ -112,7 +112,7 @@
 			height: 12px
 			padding: 0
 			border-radius: 50%
-			background: $text-color-alt
+			background: $base-color
 			position: relative
 			transition-property: background, border, box-shadow, transform
 			transition-duration: 0.6s
@@ -135,9 +135,9 @@
 			opacity: 0
 
 //.no-touchevents &:hover button::before
-/*slick sliders end*/
+/* slick sliders end
 
-/*images slider*/
+/* images slider
 .images-slider
 	position: relative
 	margin-bottom: $bottom-space
@@ -179,12 +179,12 @@
 
 	img
 		position: absolute
-		top: -2px
-		left: 50%
+		+position(0)
 		text-align: center
 		max-width: none
-		height: calc(100% + 4px)
-		transform: translate(-50%, 0)
+		width: 100%
+		height: 100%
+		+object-fit(contain)
 
 .images-slider
 
@@ -233,9 +233,9 @@
 				opacity: 1
 				transform: scale(2)
 
-/*images slider end*/
+/* images slider end
 
-/*flashes*/
+/* flashes
 .flashes
 	padding: 0 90px
 
@@ -246,4 +246,4 @@
 	& > *:last-child
 		margin-bottom: 0
 
-/*flashes end*/
+/* flashes end
