--- a/src/sass/test-mixins.sass
+++ b/src/sass/test-mixins.sass
@@ -41,7 +41,7 @@
 	width: 320px
 
 	img
-		+object-fit($pos: absolute)
+		+object-fit-position($pos: absolute)
 
 .mx-test .mx-object-fit-contain
 	+ratio(16, 9, true)
@@ -49,7 +49,7 @@
 	width: 320px
 
 	img
-		+object-fit(contain, absolute)
+		+object-fit-position(contain, absolute)
 
 .mx-margin
 	width: 320px
