--- a/src/sass/base/_buttons.sass
+++ b/src/sass/base/_buttons.sass
@@ -2,7 +2,7 @@
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
 
-/* button
+/* BUTTON
 [class|="btn"], [class*=" btn-"], input[type="submit"], input[type="button"], input[type="reset"], button
 	display: inline-block
 	vertical-align: top
@@ -181,7 +181,6 @@
 				border-color: $btn-text-color
 
 /* btn-with-arrow end
-/* button end
 
 /* button popup close
 .btn-popup-close
@@ -253,3 +252,4 @@
 		background-color: $mark-color
 
 /* button popup close end
+/* BUTTON end
