--- a/src/sass/components/_user-form.sass
+++ b/src/sass/components/_user-form.sass
@@ -18,6 +18,9 @@
 	border: solid $border-color
 	border-width: 1px 0
 
+	&:last-child
+		margin-bottom: 0
+
 	+media('<tab-lg')
 		+padding-vertical($text-layout-space-horizontal--md)
 
