--- a/src/sass/partials/_navigation.sass
+++ b/src/sass/partials/_navigation.sass
@@ -2,6 +2,7 @@
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
 
+/* NAVIGATION
 .nav
 	position: relative
 
@@ -64,3 +65,5 @@
 	.nav__drop
 		top: 0
 		left: 100%
+
+/* NAVIGATION end
