--- a/src/sass/partials/_sidebar.sass
+++ b/src/sass/partials/_sidebar.sass
@@ -1,3 +1,9 @@
 @import ../utils/variables
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
+
+/* SIDEBAR
+.sidebar
+	background-color: sandybrown
+
+/* SIDEBAR end
