--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -108,6 +108,15 @@ $grid-space: 30px !default
 $grid-space--lg: 20px !default
 $grid-space--sm: 10px !default
 
+// sidebar
+$sidebar-width: 260px !default
+
+// aside
+$aside-width: 160px !default
+
+// footer
+$footer-grid-space: 30px !default
+
 // =======Form========
 $form-text-color: $text-color !default
 $form-placeholder-color: lightgray !default
