--- a/src/sass/partials/_aside.sass
+++ b/src/sass/partials/_aside.sass
@@ -1,3 +1,9 @@
 @import ../utils/variables
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
+
+/* ASIDE
+.aside
+	background-color: sandybrown
+
+/* ASIDE end
