--- a/src/sass/partials/_footer.sass
+++ b/src/sass/partials/_footer.sass
@@ -8,10 +8,12 @@
 	color: $text-color
 	border-top: 1px solid $border-color
 
+	background-color: lightgreen
+
 .footer__holder
 	overflow: hidden
 	cursor: default
-	padding: 30px 0
+	padding: $footer-grid-space 0
 
 /* footer bottom
 .footer-bottom
