--- a/src/sass/utils/_mixins.sass
+++ b/src/sass/utils/_mixins.sass
@@ -441,7 +441,10 @@
 /// @example css - Вывод CSS
 
 =grid-parent($horizontal-space: 20px)
-	margin:
+	@if $horizontal-space == 0
+		left: 0
+		right: 0
+	@else
 		left: -#{round($horizontal-space/2)}
 		right: -#{round($horizontal-space/2)}
 
